Use ViewBag to eliminate second layout page, Add background color to social media icons for index page, Fix double-clicking collapsable navbar

--- a/NathanSmithPersonalSite/Content/Sidebar.css
+++ b/NathanSmithPersonalSite/Content/Sidebar.css
@@ -25,17 +25,21 @@
     transition: all 0.25s ease-in-out;
 }
 
-    .sticky li:hover {
-        margin-left: -10px;
-    }
+.sticky li:hover {
+    margin-left: -10px;
+}
 
-    .sticky li img:hover {
-        background-color: #89b6ff
-    }
+.sticky li img:hover {
+    background-color: #89b6ff
+}
 
-    .sticky li img {
-        height: 60px;
-        width: 60px;
-        margin: 10px 10px;
-        border-radius: 50px;
-    }
+.sticky li img {
+    height: 60px;
+    width: 60px;
+    margin: 10px 10px;
+    border-radius: 50px;
+}
+
+.img-index {
+    background-color: white;
+}
