--- a/NathanSmithPersonalSite/Content/Site.css
+++ b/NathanSmithPersonalSite/Content/Site.css
@@ -1,5 +1,4 @@
-﻿/*TODO: break up the css into page specifics*/
-body {
+﻿body {
     background-size: cover;
     background-attachment: fixed;
 }
@@ -41,7 +40,7 @@ textarea {
 
 @media screen and (max-width: 600px) {
     .sticky-container {
-        top: 87%;
+        top: 91%;
         width: 200px;
         right: -35px;
         height: 0;
@@ -73,28 +72,28 @@ textarea {
     }
 }
 
-    @media screen and (max-width: 376px) {
-        .welcomeMessage h1 {
-            font-size: 3em;
-        }
-
-        .Index {
-            padding-top: 7%;
-        }
+@media screen and (max-width: 376px) {
+    .welcomeMessage h1 {
+        font-size: 3em;
     }
 
-    /*Need more padding to the top and bottom of content*/
-    @media screen and (max-width: 825px) {
-        .container {
-            padding-top: 10%;
-            padding-bottom: 15%;
-        }
+    .Index {
+        padding-top: 7%;
     }
+}
 
-    @media screen and (max-width: 600px) {
-        .container {
-            padding-top: 17%;
-            padding-bottom: 24%;
-        }
+/*Need more padding to the top and bottom of content*/
+@media screen and (max-width: 825px) {
+    .container {
+        padding-top: 10%;
+        padding-bottom: 15%;
     }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        padding-top: 17%;
+        padding-bottom: 24%;
+    }
+}
 
